# Path-Tracer-CPU

./: .gitignore  CMakeLists.txt
src/: camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  math.h  randomGenerator.h  ray.h  sphere.h
